# AMIH

./: CMakeLists.txt  README.md
include/: bitops.h  inttuple.h  linked_list.h  linscan.h  mihasher.h  radius.cpp  radius.h  tuple.h
interface/: .linscan_interface.cpp.swp  linscan_interface.cpp  loadVar.cpp  mih_interface.cpp  saveRes.cpp
src/: .linscan.cpp.swp  linscan.cpp  mihasher.cpp
